sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
  for (i<-0 to ){
            ^AlgBubbleSort1:7: error: not found: value T
    while (T(i)<T(j) && j>0){
           ^AlgBubbleSort1:7: error: not found: value T
    while (T(i)<T(j) && j>0){
                ^AlgBubbleSort1:8: error: not found: value T
      stock=T(j)
            ^AlgBubbleSort1:9: error: not found: value T
      T(j)=T(i)
      ^AlgBubbleSort1:9: error: not found: value T
      T(j)=T(i)
           ^AlgBubbleSort1:10: error: not found: value T
      T(i)=stock
      ^