sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var j = 0
  var stock=0
  for (i<-0 to ){
    j=i
    while (T(i)<T(j) && j>0){
      stock=T(j)
      T(j)=T(i)
      T(i)=stock
    }
  }
}